--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -315,7 +315,7 @@ CONFIG_STRICT_MODULE_RWX=y
 CONFIG_REFCOUNT_FULL=y
 # CONFIG_PANIC_ON_REFCOUNT_ERROR is not set
 CONFIG_ARCH_HAS_RELR=y
-CONFIG_RELR=y
+# CONFIG_RELR is not set
 
 #
 # GCOV-based kernel profiling
@@ -4943,6 +4943,11 @@ CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 # CONFIG_DEVFREQ_SPDM is not set
 CONFIG_DEVFREQ_GOV_CDSPL3=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=200
+CONFIG_DEVFREQ_CPU_LLCC_DDR_BW_BOOST_FREQ=3879
+CONFIG_DEVFREQ_CPU_CPU_LLCC_BW_BOOST_FREQ=4577
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
